--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </main>
 
-<footer class="footer-pyp-4 mt-5">
+<footer class="footer py-4 mt-5">
   <div class="container small">
     By: Teloxa  | TVMaze
   </div>
@@ -38,12 +38,12 @@
 
 <!-- Modal for detail of movie -->
 
-<div id="detailModal" class="modal fade" tabindex="1" aria-hidden="true">
+<div id="detailModal" class="modal fade" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-xl">
     <div class="modal-content bg-black text-light">
       <div class="modal-header border-secondary">
         <h5 id="detailTitle" class="modal-title">Detail</h5>
-        <button class="btn-close btn-close-white" data-bs-dismiss="modals"></button>
+        <button class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
       </div>
       <div id="detailBody" class="modal-body">
         Loading...
